# git-cdc

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLIENT-README.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  docker-compose.production.yml  docker-compose.test.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/git-cdc-client/: Cargo.toml
crates/git-cdc-client/src/: backend.rs  lib.rs  main.rs  transfer.rs
crates/git-cdc-client/tests/: cli_lifecycle.rs  native_git_lfs.rs  transfer_protocol.rs
crates/git-cdc-core/: Cargo.toml
crates/git-cdc-core/src/: digest.rs  lib.rs  manifest.rs  profile.rs  stream.rs
crates/git-cdc-core/tests/: chunking_properties.rs  manifest_contract.rs
crates/git-cdc-protocol/: Cargo.toml
crates/git-cdc-protocol/src/: cdc.rs  lfs.rs  lib.rs
crates/git-cdc-protocol/tests/: cdc_contract.rs  lfs_contract.rs
crates/git-cdc-server/: Cargo.toml
crates/git-cdc-server/migrations/: 202607170003_gc_lifecycle.sql
crates/git-cdc-server/src/: gc.rs  lib.rs  main.rs  reconcile.rs
crates/git-cdc-server/tests/: admin_cli.rs  batch_api.rs  client_server.rs  failed_push_reachability.rs  forgejo_auth.rs  gc_lifecycle.rs  locks_api.rs  oidc_auth.rs  reconcile_git.rs  startup_config.rs  transfer_api.rs
crates/git-cdc-storage/: Cargo.toml
crates/git-cdc-storage/src/: lib.rs
crates/git-cdc-storage/tests/: chunk_store.rs
crates/git-lfs-delta-client/: Cargo.toml
crates/git-lfs-delta-client/src/: backend.rs  main.rs  transfer.rs
crates/git-lfs-delta-client/tests/: cli_lifecycle.rs  native_git_lfs.rs  transfer_protocol.rs
crates/git-lfs-delta-core/: Cargo.toml
crates/git-lfs-delta-core/src/: digest.rs  lib.rs  manifest.rs  profile.rs
crates/git-lfs-delta-core/tests/: chunking_properties.rs  manifest_contract.rs
crates/git-lfs-delta-protocol/: Cargo.toml
crates/git-lfs-delta-protocol/src/: cdc.rs  lfs.rs  lib.rs
crates/git-lfs-delta-protocol/tests/: cdc_contract.rs  lfs_contract.rs
crates/git-lfs-delta-server/: Cargo.toml
crates/git-lfs-delta-server/migrations/: 202607170001_initial.sql  202607170002_oidc_grants.sql  202607170004_upload_session_chunks.sql  202607180001_session_integrity.sql
crates/git-lfs-delta-server/src/: gc.rs  lib.rs  main.rs  reconcile.rs
crates/git-lfs-delta-server/tests/: admin_cli.rs  batch_api.rs  client_server.rs  failed_push_reachability.rs  forgejo_auth.rs  gc_lifecycle.rs  locks_api.rs  oidc_auth.rs  reconcile_git.rs  schema_migrations.rs  startup_config.rs  transfer_api.rs
crates/git-lfs-delta-storage/: Cargo.toml
crates/git-lfs-delta-storage/src/: lib.rs
crates/git-lfs-delta-storage/tests/: chunk_store.rs
crates/xtask/src/: main.rs
docs/: OPERATIONS.md  PROJECT_PLAN.md  PROTOCOL.md
scripts/: install.sh  package-client.sh
tests/: acceptance.sh  backup_restore_e2e.sh  client_installer.sh  forgejo_e2e.sh
