[workspace]
resolver = "3"
members = ["crates/git-cdc-core"]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TamedTornado/git-cdc"
authors = ["Jason Maskell <7510041+TamedTornado@users.noreply.github.com>"]

[workspace.dependencies]
blake3 = "1.8.5"
fastcdc = "4.0.1"
hex = "0.4.3"
proptest = "1.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11.0"
thiserror = "2.0.18"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
