[workspace]
resolver = "3"
members = [
    "crates/git-lfs-delta-client",
    "crates/git-lfs-delta-core",
    "crates/git-lfs-delta-protocol",
    "crates/git-lfs-delta-server",
    "crates/git-lfs-delta-storage",
    "crates/xtask",
]

[workspace.package]
version = "0.1.0-beta.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/TamedTornado/git-lfs-delta"
authors = ["Jason Maskell <7510041+TamedTornado@users.noreply.github.com>"]

[workspace.dependencies]
blake3 = "1.8.5"
axum = "0.8.9"
bytes = "1.11"
clap = { version = "4.6.2", features = ["derive"] }
crossbeam-channel = "0.5.15"
directories = "6.0.0"
fastcdc = "4.0.1"
futures-util = "0.3"
hex = "0.4.3"
jsonwebtoken = { version = "9.3.1", default-features = false }
object_store = { version = "0.14.1", features = ["aws", "azure", "gcp"] }
proptest = "1.9.0"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serial_test = "3.2"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "postgres", "uuid", "json", "migrate", "macros"] }
subtle = "2.6"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.53.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
