[package]
name = "git-cdc"
description = "Cross-platform content-defined chunk transfer agent for Git LFS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
blake3.workspace = true
clap.workspace = true
directories.workspace = true
git-cdc-core = { path = "../git-cdc-core", version = "0.1.0-alpha.1" }
git-cdc-protocol = { path = "../git-cdc-protocol", version = "0.1.0-alpha.1" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
bytes.workspace = true
tempfile.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
