[package]
name = "git-cdc-protocol"
description = "Git LFS and chunk-aware wire contracts for Git-CDC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
git-cdc-core = { path = "../git-cdc-core" }
serde.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
