[package]
name = "git-cdc-server"
description = "Forge-neutral Git LFS and CDC service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
git-cdc-core = { path = "../git-cdc-core", version = "0.1.0-alpha.1" }
git-cdc-protocol = { path = "../git-cdc-protocol", version = "0.1.0-alpha.1" }
git-cdc-storage = { path = "../git-cdc-storage", version = "0.1.0-alpha.1" }
object_store.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
git-cdc = { path = "../git-cdc-client", version = "0.1.0-alpha.1" }
http-body-util = "0.1"
serial_test.workspace = true
tower.workspace = true

[lints]
workspace = true
