[package]
name = "git-lfs-delta-protocol"
description = "Git LFS and chunk-aware wire contracts for Git LFS Delta"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
git-lfs-delta-core = { path = "../git-lfs-delta-core", version = "0.1.0-beta.2" }
serde.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
